bitcoin_includedir = $(includedir)/bitcoin
bitcoin_include_HEADERS = \
    bitcoin.hpp
    
bitcoin_bitcoin_includedir = $(includedir)/bitcoin/bitcoin
bitcoin_bitcoin_include_HEADERS = \
    bitcoin.hpp \
    bitcoin/address.hpp \
    bitcoin/block.hpp \
    bitcoin/compat.h \
    bitcoin/constants.hpp \
    bitcoin/define.hpp \
    bitcoin/error.hpp \
    bitcoin/format.hpp \
    bitcoin/getx_responder.hpp \
    bitcoin/poller.hpp \
    bitcoin/primitives.hpp \
    bitcoin/satoshi_serialize.hpp \
    bitcoin/script.hpp \
    bitcoin/session.hpp \
    bitcoin/stealth.hpp \
    bitcoin/threadpool.hpp \
    bitcoin/transaction.hpp \
    bitcoin/transaction_indexer.hpp \
    bitcoin/transaction_pool.hpp \
    bitcoin/types.hpp \
    bitcoin/validate.hpp \
    bitcoin/version.hpp

bitcoin_bitcoin_impl_includedir = $(includedir)/bitcoin/bitcoin/impl
bitcoin_bitcoin_impl_include_HEADERS = \
    bitcoin/impl/format.ipp

bitcoin_bitcoin_impl_serialize_includedir = $(includedir)/bitcoin/bitcoin/impl/serialize
bitcoin_bitcoin_impl_serialize_include_HEADERS = \
    bitcoin/impl/serialize/block.ipp \
    bitcoin/impl/serialize/misc.ipp

bitcoin_bitcoin_blockchain_includedir = $(includedir)/bitcoin/bitcoin/blockchain
bitcoin_bitcoin_blockchain_include_HEADERS = \
    bitcoin/blockchain/blockchain.hpp

bitcoin_bitcoin_network_includedir = $(includedir)/bitcoin/bitcoin/network
bitcoin_bitcoin_network_include_HEADERS = \
    bitcoin/network/channel.hpp \
    bitcoin/network/handshake.hpp \
    bitcoin/network/hosts.hpp \
    bitcoin/network/network.hpp \
    bitcoin/network/protocol.hpp \
    bitcoin/network/shared_const_buffer.hpp

bitcoin_bitcoin_util_includedir = $(includedir)/bitcoin/bitcoin/utility
bitcoin_bitcoin_util_include_HEADERS = \
    bitcoin/utility/assert.hpp \
    bitcoin/utility/async_parallel.hpp \
    bitcoin/utility/base58.hpp \
    bitcoin/utility/checksum.hpp \
    bitcoin/utility/decorator.hpp \
    bitcoin/utility/ec_keys.hpp \
    bitcoin/utility/hash.hpp \
    bitcoin/utility/hash_number.hpp \
    bitcoin/utility/logger.hpp \
    bitcoin/utility/mmfile.hpp \
    bitcoin/utility/script_number.hpp \
    bitcoin/utility/serializer.hpp \
    bitcoin/utility/subscriber.hpp \
    bitcoin/utility/timed_section.hpp \
    bitcoin/utility/weak_bind.hpp

bitcoin_bitcoin_util_external_includedir = $(includedir)/bitcoin/bitcoin/utility/external
bitcoin_bitcoin_util_external_include_HEADERS = \
    bitcoin/utility/external/hmac_sha512.h \
    bitcoin/utility/external/ripemd160.h \
    bitcoin/utility/external/sha1.h \
    bitcoin/utility/external/sha256.h \
    bitcoin/utility/external/sha512.h \
    bitcoin/utility/external/zeroize.h \
    bitcoin/utility/external/uint256.h

bitcoin_bitcoin_impl_utility_includedir = $(includedir)/bitcoin/bitcoin/impl/utility
bitcoin_bitcoin_impl_utility_include_HEADERS = \
    bitcoin/impl/utility/serializer.ipp

bitcoin_bitcoin_wallet_includedir = $(includedir)/bitcoin/bitcoin/wallet
bitcoin_bitcoin_wallet_include_HEADERS = \
    bitcoin/wallet/amount.hpp \
    bitcoin/wallet/hd_keys.hpp \
    bitcoin/wallet/key_formats.hpp \
    bitcoin/wallet/mnemonic.hpp \
    bitcoin/wallet/stealth_address.hpp \
    bitcoin/wallet/uri.hpp